--- a/projects/facerec.ipynb
+++ b/projects/facerec.ipynb
@@ -126,7 +126,7 @@
         "import os\n",
         "\n",
         "# Establish a connection to the PostgreSQL database\n",
-        "conn = psycopg2.connect(\"Put your Aiven connection!")\n",
+        "conn = psycopg2.connect(\"postgres://avnadmin:AVNS_yuUxtiOPTfyzlVboLSt@pg-2108bef6-izverg.e.aivencloud.com:19700/defaultdb?sslmode=require")\n",
         "cur = conn.cursor()\n",
         "\n",
         "# Create a cursor for executing SQL queries\n",
